--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -1,8 +1,3 @@
-html, body {
-  margin: 0;
-  padding: 0;
-}
-
 @mixin input-text {
   width: 100%;
   height: 56px;
@@ -24,6 +19,7 @@ html, body {
   height: 56px;
   border-radius: 8px;
   color: white;
+  border: 0;
 }
 
 @mixin divider {
