--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -1,29 +1,47 @@
+a {
+  color: #363636;
+  text-decoration: none;
+}
+
 @mixin input-text {
   width: 100%;
   height: 56px;
   border: solid 1px #e5e5e5;
-  border-radius: 8px;
+  border-radius: 6px;
   &:focus {
     border: solid 1px #838788;
     caret-color: #f65c6c;
+    outline: none;
   }
 }
 
 @mixin input-button($isDisable: false) {
   @if $isDisable {
     background-color: #d7d7d9;
+    cursor: default;
   } @else {
     background-color: #524fff;
+    cursor: pointer;
+    &:hover {
+      background-color: rgba(82, 79, 255, 0.65);
+    }
   }
   width: 100%;
   height: 56px;
   border-radius: 8px;
   color: white;
   border: 0;
+  outline: none;
 }
 
 @mixin divider {
   width: 100%;
   height: 0.5px;
   background-color: #363636;
+}
+
+@mixin error {
+  color: #ed4956;
+  font-size: 13px;
+  text-align: center;
 }
