--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -20,6 +20,8 @@ a {
   height: 56px;
   border: solid 1px #e5e5e5;
   border-radius: 6px;
+  padding:0 0 0 16px;
+  font-size: 15px;
   &:focus {
     border: solid 1px #838788;
     caret-color: #f65c6c;
@@ -49,7 +51,8 @@ a {
 @mixin divider {
   width: 100%;
   height: 0.5px;
-  background-color: #363636;
+  background-color: #cbcbcb;
+  border: none;
 }
 
 @mixin error {
